--- a/assets/app.css
+++ b/assets/app.css
@@ -1,7 +1,7 @@
 * { box-sizing: border-box; }
 html, body { font: 14px arial, sans-serif; color: #222; overflow: hidden;
 	width: 100%; height: 100%; margin: 0; padding: 0;
-	background: #444;
+	background: #fff;
 }
 
 a { color: #000; text-decoration: none; transition: color .3s ease-out;}
