--- a/assets/app.css
+++ b/assets/app.css
@@ -8,4 +8,4 @@ a { color: #000; text-decoration: none; transition: color .3s ease-out;}
 a:hover { text-decoration: underline; }
 
 #app { width: 100%; height: 100%; }
-webview { width: 100%; height: 100%; }
+webview { width: 100%; height: 100%; transition: opacity .7s ease-out; }
